# zms-ra-ingest

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  sources-test.json  sources.example.json  template.env
.github/workflows/: ci.yml  release.yml
src/ra_ingest/: audit.py  bands.py  bootstrap.py  config.py  gcal_reconciler.py  gcal_sync.py  grant_matcher.py  main.py  ra_client.py  reconciler.py  report.py  spectrum_picker.py
src/ra_ingest/sources/: gcal.py  ods.py  protocol.py
tests/: mock_ods_server.py  test_audit.py  test_bootstrap.py  test_gcal.py  test_gcal_reconciler.py  test_ods.py  test_reconciler.py  test_spectrum_picker.py
