[project]
name = "zms-ra-ingest"
version = "0.1.0"
description = "Ingests RA facility observation schedules into OpenZMS as claims"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "zms-client @ git+https://gitlab.flux.utah.edu/openzms/zms-client-py.git@d1f929392298e22311d993f468136cd362c29003",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.20.0,<0.28.0",
    "requests>=2.28.0",
]

[project.scripts]
zms-ra-ingest = "ra_ingest.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ra_ingest"]

[tool.hatch.envs.default]
python = "3.11"

[tool.hatch.envs.test]
dependencies = [
    "pytest~=7.2.0",
    "pytest-mock~=3.11.1",
]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"

[[tool.hatch.envs.test.matrix]]
python = ["3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "ruff",
]

[tool.hatch.envs.lint.scripts]
check = "ruff check . --ignore E501"
fmt = "ruff format --check --diff ."
all = ["check", "fmt"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
